problem with hover effects table

--- a/index.html
+++ b/index.html
@@ -175,13 +175,59 @@
       </div>
     </div>
 
-    <!-- games section -->
-    <div class="table-sale__container">
+    <!-- history timeline and shirt sale section -->
+    <div class="history-sale__container">
       <div class="shirt-sale__container">
         <img class="shirt-sale__image" src="img/shirt-sale.png" />
       </div>
     </div>
 
+    <!-- football table -->
+    <div class="table__container">
+      <h2 class="table__title heading-2">Table</h2>
+      <table class="table__content">
+        <tr class="table__header">
+          <th>#</th>
+          <th>Team</th>
+          <th>GP</th>
+          <th>W</th>
+          <th>D</th>
+          <th>L</th>
+          <th>GD</th>
+          <th>PTS</th>
+        </tr>
+        <tr class="table__row table__row--THG">
+          <th>1</th>
+          <th>FC THG</th>
+          <th>15</th>
+          <th>12</th>
+          <th>2</th>
+          <th>1</th>
+          <th>28</th>
+          <th>36</th>
+        </tr>
+        <tr class="table__row table__row--Lions">
+          <th>2</th>
+          <th>FC Lions 08</th>
+          <th>15</th>
+          <th>10</th>
+          <th>3</th>
+          <th>2</th>
+          <th>16</th>
+          <th>33</th>
+        </tr>
+        <tr class="table__row table__row--EGFC">
+          <th>3</th>
+          <th>E. G. F. C</th>
+          <th>15</th>
+          <th>7</th>
+          <th>5</th>
+          <th>3</th>
+          <th>18</th>
+          <th>26</th>
+        </tr>
+      </table>
+    </div>
     <!-- Players section -->
     <div class="players">
       <h2 class="heading-2 heading-2--light">Top 3 Goalscorers</h2>
@@ -277,51 +323,6 @@
         </p>
       </div>
     </section>
-
-    <div class="table__container">
-      <table class="table__content">
-        <tr class="table__header">
-          <th>#</th>
-          <th>Team</th>
-          <th>GP</th>
-          <th>W</th>
-          <th>D</th>
-          <th>L</th>
-          <th>GD</th>
-          <th>PTS</th>
-        </tr>
-        <tr class="table__row table__row--THG">
-          <th>1</th>
-          <th>FC THG</th>
-          <th>15</th>
-          <th>12</th>
-          <th>2</th>
-          <th>1</th>
-          <th>28</th>
-          <th>36</th>
-        </tr>
-        <tr class="table__row table__row--Lions">
-          <th>2</th>
-          <th>FC Lions 08</th>
-          <th>15</th>
-          <th>10</th>
-          <th>3</th>
-          <th>2</th>
-          <th>16</th>
-          <th>33</th>
-        </tr>
-        <tr class="table__row table__row--EGFC">
-          <th>3</th>
-          <th>E. G. F. C</th>
-          <th>15</th>
-          <th>7</th>
-          <th>5</th>
-          <th>3</th>
-          <th>18</th>
-          <th>26</th>
-        </tr>
-      </table>
-    </div>
 
     <!-- Story Pictures section -->
     <div class="story__pictures">
