progress with cards

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <!-- slideshow images-->
         <div class="slideshow__wrapper">
           <div class="slide">
-            <img class="slide__image" src="img/header-image2.png" />
+            <img class="slide__image" src="img/training-top.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 1</h1> -->
           </div>
           <div class="slide">
@@ -122,11 +122,11 @@
             <!-- <h1 class="slide__header slide__header--1">Example 2</h1> -->
           </div>
           <div class="slide">
-            <img class="slide__image" src="img/training-top.png" />
+            <img class="slide__image" src="img/match.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 3</h1> -->
           </div>
           <div class="slide">
-            <img class="slide__image" src="img/match.png" />
+            <img class="slide__image" src="img/players/Player1.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 4</h1> -->
           </div>
         </div>
@@ -173,100 +173,150 @@
           <span class="sea-sepent__ripple--effect" style="--i: 10"></span>
         </div>
       </div>
+      <div class="cards__container">
+        <!-- panel 1 -->
+        <div class="panel active panel__one">
+          <p class="paragraph-text paragraph-text--light">Lombardy Signs!</p>
+        </div>
+        <!-- panel 2 -->
+        <div class="panel active panel__two">
+          <p class="paragraph-text paragraph-text--light">Defeat in Cup</p>
+        </div>
+        <!-- panel 3 -->
+        <div class="panel active panel__three">
+          <p class="paragraph-text paragraph-text--light">Membership</p>
+        </div>
+        <!-- panel 4 -->
+        <div class="panel active panel__four">
+          <p class="paragraph-text paragraph-text--light">Training Programs</p>
+        </div>
+        <!-- panel 5 -->
+        <div class="panel active panel__five">
+          <p class="paragraph-text paragraph-text--light">Team Spirit</p>
+        </div>
+      </div>
     </div>
 
     <!-- history timeline and shirt sale section -->
-    <div class="history-sale__container">
+    <div class="video-sale__container">
+      <div class="player">
+        <video
+          src="https://www.pexels.com/video/6078638/download/?fps=25.0&h=720&w=1280"
+          class="video"
+          playsinline
+        ></video>
+        <div class="player__text-container">
+          <p
+            class="paragraph-text paragraph-text--light paragraph-text--uppercase"
+          >
+            FC THG 08 TV
+          </p>
+          <p class="paragraph-text paragraph-text--light">
+            Youth team training in the new state of the art complex for weekend
+            fixture.
+          </p>
+        </div>
+      </div>
+
       <div class="shirt-sale__container">
         <img class="shirt-sale__image" src="img/shirt-sale.png" />
       </div>
     </div>
 
-    <!-- football table -->
-    <div class="table__container">
-      <h2 class="table__title heading-2">Table</h2>
-      <table class="table__content">
-        <tr class="table__header">
-          <th>#</th>
-          <th>Team</th>
-          <th>GP</th>
-          <th>W</th>
-          <th>D</th>
-          <th>L</th>
-          <th>GD</th>
-          <th>PTS</th>
-        </tr>
-        <tr class="table__row table__row--THG">
-          <th>1</th>
-          <th>FC THG</th>
-          <th>15</th>
-          <th>12</th>
-          <th>2</th>
-          <th>1</th>
-          <th>28</th>
-          <th>36</th>
-        </tr>
-        <tr class="table__row table__row--Lions">
-          <th>2</th>
-          <th>FC Lions 08</th>
-          <th>15</th>
-          <th>10</th>
-          <th>3</th>
-          <th>2</th>
-          <th>16</th>
-          <th>33</th>
-        </tr>
-        <tr class="table__row table__row--EGFC">
-          <th>3</th>
-          <th>E. G. F. C</th>
-          <th>15</th>
-          <th>7</th>
-          <th>5</th>
-          <th>3</th>
-          <th>18</th>
-          <th>26</th>
-        </tr>
-      </table>
-    </div>
-    <!-- Players section -->
-    <div class="players">
-      <h2 class="heading-2 heading-2--light">Top 3 Goalscorers</h2>
-      <div class="players__list">
-        <!-- Player one markup-->
-        <img
-          src="img/players/Player1.png"
-          alt="Goalscorer 1"
-          class="players__img"
-        />
-        <div class="players__details">
-          <h4 class="heading-4 heading-4--light players__name">
-            Ishmael Jean-Baptiste
-          </h4>
-          <p class="players__goals">18 league goals</p>
+    <div class="team">
+      <!-- Players section -->
+      <div class="players">
+        <h2 class="heading-2 heading-2--light">Top 3 Goalscorers</h2>
+        <div class="players__list">
+          <!-- Player one markup-->
+          <img
+            src="img/players/Player1.png"
+            alt="Goalscorer 1"
+            class="players__img"
+          />
+          <div class="players__details">
+            <h4 class="heading-4 heading-4--light players__name">
+              Ishmael Baptiste
+            </h4>
+            <p class="players__goals paragraph-text paragraph-text--uppercase">
+              18 league goals
+            </p>
+          </div>
+          <!-- Player two markup -->
+          <img
+            src="img/players/Player2.png"
+            alt="Goalscorer 2"
+            class="players__img"
+          />
+          <div class="players__details">
+            <h4 class="heading-4 heading-4--light players__name">
+              Trystan Llewellyn
+            </h4>
+            <p class="players__goals paragraph-text paragraph-text--uppercase">
+              14 league goals
+            </p>
+          </div>
+          <!-- Player three markup -->
+          <img
+            src="img/players/Player3.png"
+            alt="Goalscorer 3"
+            class="players__img"
+          />
+          <div class="players__details">
+            <h4 class="heading-4 heading-4--light players__name">
+              Thomas Mahraz
+            </h4>
+            <p class="players__goals paragraph-text paragraph-text--uppercase">
+              9 league goals
+            </p>
+          </div>
         </div>
-        <!-- Player two markup -->
-        <img
-          src="img/players/Player2.png"
-          alt="Goalscorer 2"
-          class="players__img"
-        />
-        <div class="players__details">
-          <h4 class="heading-4 heading-4--light players__name">
-            Trystan Llewellyn
-          </h4>
-          <p class="players__goals">14 league goals</p>
-        </div>
-        <!-- Player three markup -->
-        <img
-          src="img/players/Player3.png"
-          alt="Goalscorer 3"
-          class="players__img"
-        />
-        <div class="players__details">
-          <h4 class="heading-4 heading-4--light players__name">
-            Thomas Mahraz
-          </h4>
-          <p class="players__goals">9 league goals</p>
+
+        <!-- football table -->
+        <div class="table__container">
+          <h2 class="table__title heading-2 heading-2--light">Table</h2>
+          <table class="table__content">
+            <tr class="table__header">
+              <th>#</th>
+              <th>Team</th>
+              <th>GP</th>
+              <th>W</th>
+              <th>D</th>
+              <th>L</th>
+              <th>GD</th>
+              <th>PTS</th>
+            </tr>
+            <tr class="table__row table__row--THG">
+              <th>1</th>
+              <th>FC THG</th>
+              <th>15</th>
+              <th>12</th>
+              <th>2</th>
+              <th>1</th>
+              <th>28</th>
+              <th>36</th>
+            </tr>
+            <tr class="table__row table__row--Lions">
+              <th>2</th>
+              <th>FC Lions 08</th>
+              <th>15</th>
+              <th>10</th>
+              <th>3</th>
+              <th>2</th>
+              <th>16</th>
+              <th>33</th>
+            </tr>
+            <tr class="table__row table__row--EGFC">
+              <th>3</th>
+              <th>E. G. F. C</th>
+              <th>15</th>
+              <th>7</th>
+              <th>5</th>
+              <th>3</th>
+              <th>18</th>
+              <th>26</th>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
@@ -276,7 +326,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/favicons/serpent-favicon.png" />
         <h4 class="heading-4">Membership</h4>
-        <p class="feature__text">
+        <p class="paragraph-text">
           Creating a Blue Sea Serpents account unlocks exclusive video content,
           including match highlights, player interviews and analysis.
         </p>
@@ -284,7 +334,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/favicons/football-favicon.png" />
         <h4 class="heading-4">Official Supporters Clubs</h4>
-        <p class="feature__text">
+        <p class="paragraph-text">
           We are proud to have 225 Official Supporters' Clubs in countries all
           over the world, including England, Italy, USA and Germany.
         </p>
@@ -292,7 +342,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/favicons/stadium-favicon.png" />
         <h4 class="heading-4">Tickets & Hospitality</h4>
-        <p class="feature__text">
+        <p class="paragraph-text">
           A Blue Sea Serpents membership allows supporters priority purchasing
           matchday tickets. Hospitality packages are also availiable, with our
           complex playing host to a premium conference center.
@@ -301,7 +351,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/favicons/pin-favicon.png" />
         <h4 class="heading-4">Location</h4>
-        <p class="feature__text">
+        <p class="paragraph-text">
           Our stadium, ticket office and merchandise shop are all located in the
           heart of the city.
         </p>
@@ -309,7 +359,7 @@
       <div class="feature">
         <img class="feature__icon" src="img/favicons/partners-favicon.png" />
         <h4 class="heading-4">Partners</h4>
-        <p class="feature__text">
+        <p class="paragraph-text">
           We are proud to recognise 18 official club partners this season, as
           principal, official and women's team associates.
         </p>
@@ -317,34 +367,35 @@
       <div class="feature">
         <img class="feature__icon" src="img/favicons/trophy-favicon.png" />
         <h4 class="heading-4">Trophies</h4>
-        <p class="feature__text">
+        <p class="paragraph-text">
           The Blue Sea Serpents have won it all. 25 league titles, 15 domestic
-          cups and 8 international triumphs since we were founded in 1908.
+          cups and 8 international triumphs since we were founded in 1893.
         </p>
       </div>
     </section>
 
     <!-- Story Pictures section -->
     <div class="story__pictures">
-      <img class="story__img--1" src="img/underpass.png" />
-      <img class="story__img--2" src="img/mural.png" />
+      <img class="story__img--1" src="img/graffiti/underpass.png" />
+      <img class="story__img--2" src="img/graffiti/mural.png" />
     </div>
 
     <!-- Story Content section -->
     <div class="story__content">
       <h3 class="heading-3 mb-sm">A piece on our distinct culture...</h3>
       <h2 class="heading-2 mb-md">Graffiti Art</h2>
-      <p class="story__text">
+      <p class="story__text paragraph-text">
         Fans of FC THG 08 are known for their strong sense of pride and loyalty
         to the club, which is often reflected in the graffiti they create around
         the stadium and throughout the city. These fans believe that graffiti is
         a powerful way to express their love for the club and to connect with
         other fans. They often depict the club's crest, players, and name in
-        blue - the traditional colour of FC THG 08. Graffiti is seen as a way to
-        assert the team's identity in the community and to create a sense of
-        belonging among fans. Despite this being considered as vandalism by
-        some, the fans of FC THG 08 see it as a way to add to their club's and
-        city's culture.
+        blue - the traditional colour of FC THG 08.
+        <br /><br />
+        Graffiti is seen as a way to assert the team's identity in the community
+        and to create a sense of belonging among fans. Despite this being
+        considered as vandalism by some, the fans of FC THG 08 see it as a way
+        to add to their club's and city's culture.
       </p>
       <button class="btn">Find out more</button>
     </div>
