more image work

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         <!-- slideshow images-->
         <div class="slideshow__wrapper">
           <div class="slide">
-            <img class="slide__image" src="img/training-top.png" />
+            <img class="slide__image" src="img/banners/player-one-banner.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 1</h1> -->
           </div>
           <div class="slide">
-            <img class="slide__image" src="img/conference.png" />
+            <img class="slide__image" src="img/banners/conference.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 2</h1> -->
           </div>
           <div class="slide">
@@ -126,7 +126,7 @@
             <!-- <h1 class="slide__header slide__header--1">Example 3</h1> -->
           </div>
           <div class="slide">
-            <img class="slide__image" src="img/players/Player1.png" />
+            <img class="slide__image" src="img/training-top.png" />
             <!-- <h1 class="slide__header slide__header--1">Example 4</h1> -->
           </div>
         </div>
