--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
           <span class="sea-sepent__ripple--effect" style="--i: 10"></span>
         </div>
       </div>
+      <!-- panel cards section -->
       <div class="cards__container">
         <!-- panel 1 -->
         <div class="panel active panel__one">
