removal of not needed active class

--- a/index.html
+++ b/index.html
@@ -177,23 +177,33 @@
       <div class="cards__container">
         <!-- panel 1 -->
         <div class="panel active panel__one">
-          <p class="paragraph-text paragraph-text--light">Lombardy Signs!</p>
+          <p class="panel__text paragraph-text paragraph-text--light">
+            Lombardy Signs!
+          </p>
         </div>
         <!-- panel 2 -->
-        <div class="panel active panel__two">
-          <p class="paragraph-text paragraph-text--light">Defeat in Cup</p>
+        <div class="panel panel__two">
+          <p class="panel__text paragraph-text paragraph-text--light">
+            Defeat in Cup
+          </p>
         </div>
         <!-- panel 3 -->
-        <div class="panel active panel__three">
-          <p class="paragraph-text paragraph-text--light">Membership</p>
+        <div class="panel panel__three">
+          <p class="panel__text paragraph-text paragraph-text--light">
+            Membership
+          </p>
         </div>
         <!-- panel 4 -->
-        <div class="panel active panel__four">
-          <p class="paragraph-text paragraph-text--light">Training Programs</p>
+        <div class="panel panel__four">
+          <p class="panel__text paragraph-text paragraph-text--light">
+            Training Programs
+          </p>
         </div>
         <!-- panel 5 -->
-        <div class="panel active panel__five">
-          <p class="paragraph-text paragraph-text--light">Team Spirit</p>
+        <div class="panel panel__five">
+          <p class="panel__text paragraph-text paragraph-text--light">
+            Team Spirit
+          </p>
         </div>
       </div>
     </div>
