javascript for card panels

--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
             FC THG 08 TV
           </p>
           <p class="paragraph-text paragraph-text--light">
-            Youth team training in the new state of the art complex for weekend
-            fixture.
+            Youth team training for weekend fixture.
           </p>
         </div>
       </div>
