blank slate for progress bars

--- a/index.html
+++ b/index.html
@@ -26,77 +26,43 @@
   <body class="container">
     <!-- First Navbar section -->
     <!-- Navbar container I've added in for background-color -->
-    <div class="first-nav__container">
-      <!-- First Navbar content -- links with favicons section -->
-      <nav class="first-nav__content">
-        <ul class="first-nav__list">
-          <li class="first-nav__item">
-            <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-right-to-bracket"></i>Sign Up / Log In</a
-            >
-          </li>
-          <li class="first-nav__item">
-            <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-cart-shopping"></i>Cart(<span>2 Items</span
-              >)</a
-            >
-          </li>
-          <li class="first-nav__item">
-            <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-truck"></i>Order Now</a
-            >
-          </li>
-          <li class="first-nav__item">
-            <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-heart"></i>Wish List</a
-            >
-          </li>
-        </ul>
-      </nav>
-      <!-- Search form section of first nav -->
-      <div class="search">
-        <form class="search__form">
-          <input type="text" class="search__input" placeholder="Search" />
-          <button class="search__btn"><i class="fas fa-search"></i></button>
-        </form>
-      </div>
-    </div>
+    <div class="progress-timeline__container"></div>
 
-    <div class="second-nav__container">
+    <div class="nav__container">
       <!-- logo of the football team  -->
       <img
-        class="second-nav__badge"
+        class="nav__badge"
         src="img/identity/football-badge.png"
         alt="badge"
       />
       <!-- styled burger menu for smaller devices -->
-      <input type="checkbox" class="second-nav__checkbox" id="navi-toggle" />
-      <label for="navi-toggle" class="second-nav__button">
-        <span class="second-nav__icon">&nbsp;</span>
+      <input type="checkbox" class="nav__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="nav__button">
+        <span class="nav__icon">&nbsp;</span>
       </label>
       <!-- background behind menu toggle -->
-      <div class="second-nav__background">&nbsp;</div>
+      <div class="nav__background">&nbsp;</div>
       <!-- Specific second nav -->
-      <nav class="second-nav__content">
+      <nav class="nav__content">
         <!-- list of items to select in second navbar -->
-        <ul class="second-nav__list">
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Latest</a>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Latest</a>
           </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Matches</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Matches</a>
           </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Stadium</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Stadium</a>
           </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Culture</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Culture</a>
           </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Tickets</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Tickets</a>
           </li>
-          <li class="second-nav__item">
-            <a href="#" class="second-nav__link">Shop</a>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Shop</a>
           </li>
         </ul>
       </nav>
