base for progress timeline finalised

--- a/index.html
+++ b/index.html
@@ -144,31 +144,31 @@
         <!-- panel 1 -->
         <div class="panel active panel__one">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Lombardy Signs!
+            Lombardy signs 3 year deal
           </p>
         </div>
         <!-- panel 2 -->
         <div class="panel panel__two">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Defeat in Cup
+            Team Spirit in league win
           </p>
         </div>
         <!-- panel 3 -->
         <div class="panel panel__three">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Membership
+            Next year Membership open
           </p>
         </div>
         <!-- panel 4 -->
         <div class="panel panel__four">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Training Programs
+            Training Programs available
           </p>
         </div>
         <!-- panel 5 -->
         <div class="panel panel__five">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Team Spirit
+            Defeat in Cup
           </p>
         </div>
       </div>
