--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
   <body class="container">
     <!-- First Navbar section -->
     <!-- Navbar container I've added in for background-color -->
-    <div class="progress-timeline__container"></div>
+    <div class="progress-timeline__container">
+      <div class="progress-timeline__content">
+        <div class="progress" id="progress"></div>
+        <div class="circle active">1</div>
+        <div class="circle">2</div>
+        <div class="circle">3</div>
+        <div class="circle">4</div>
+      </div>
+      <button class="btn" id="prev" disabled>Prev</button>
+      <button class="btn" id="next">Next</button>
+    </div>
 
     <div class="nav__container">
       <!-- logo of the football team  -->
