--- a/index.html
+++ b/index.html
@@ -26,53 +26,77 @@
   <body class="container">
     <!-- First Navbar section -->
     <!-- Navbar container I've added in for background-color -->
-    <div class="progress-timeline__container">
-      <div class="progress-timeline__content">
-        <div class="progress" id="progress"></div>
-        <div class="circle active">1</div>
-        <div class="circle">2</div>
-        <div class="circle">3</div>
-        <div class="circle">4</div>
+    <div class="first-nav__container">
+      <!-- First Navbar content -- links with favicons section -->
+      <nav class="first-nav__content">
+        <ul class="first-nav__list">
+          <li class="first-nav__item">
+            <a href="#" class="first-nav__link"
+              ><i class="fa-solid fa-right-to-bracket"></i>Sign Up / Log In</a
+            >
+          </li>
+          <li class="first-nav__item">
+            <a href="#" class="first-nav__link"
+              ><i class="fa-solid fa-cart-shopping"></i>Cart(<span>2 Items</span
+              >)</a
+            >
+          </li>
+          <li class="first-nav__item">
+            <a href="#" class="first-nav__link"
+              ><i class="fa-solid fa-truck"></i>Order Now</a
+            >
+          </li>
+          <li class="first-nav__item">
+            <a href="#" class="first-nav__link"
+              ><i class="fa-solid fa-heart"></i>Wish List</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <!-- Search form section of first nav -->
+      <div class="search">
+        <form class="search__form">
+          <input type="text" class="search__input" placeholder="Search" />
+          <button class="search__btn"><i class="fas fa-search"></i></button>
+        </form>
       </div>
-      <button class="btn" id="prev" disabled>Prev</button>
-      <button class="btn" id="next">Next</button>
     </div>
 
-    <div class="nav__container">
+    <div class="second-nav__container">
       <!-- logo of the football team  -->
       <img
-        class="nav__badge"
+        class="second-nav__badge"
         src="img/identity/football-badge.png"
         alt="badge"
       />
       <!-- styled burger menu for smaller devices -->
-      <input type="checkbox" class="nav__checkbox" id="navi-toggle" />
-      <label for="navi-toggle" class="nav__button">
-        <span class="nav__icon">&nbsp;</span>
+      <input type="checkbox" class="second-nav__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="second-nav__button">
+        <span class="second-nav__icon">&nbsp;</span>
       </label>
       <!-- background behind menu toggle -->
-      <div class="nav__background">&nbsp;</div>
+      <div class="second-nav__background">&nbsp;</div>
       <!-- Specific second nav -->
-      <nav class="nav__content">
+      <nav class="second-nav__content">
         <!-- list of items to select in second navbar -->
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link">Latest</a>
+        <ul class="second-nav__list">
+          <li class="second-nav__item">
+            <a href="#" class="second-nav__link">Latest</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Matches</a>
+          <li class="second-nav__item">
+            <a href="#" class="second-nav__link">Matches</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Stadium</a>
+          <li class="second-nav__item">
+            <a href="#" class="second-nav__link">Stadium</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Culture</a>
+          <li class="second-nav__item">
+            <a href="#" class="second-nav__link">Culture</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Tickets</a>
+          <li class="second-nav__item">
+            <a href="#" class="second-nav__link">Tickets</a>
           </li>
-          <li class="nav__item">
-            <a href="#" class="nav__link">Shop</a>
+          <li class="second-nav__item">
+            <a href="#" class="second-nav__link">Shop</a>
           </li>
         </ul>
       </nav>
@@ -154,31 +178,31 @@
         <!-- panel 1 -->
         <div class="panel active panel__one">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Lombardy signs 3 year deal
+            Lombardy Signs!
           </p>
         </div>
         <!-- panel 2 -->
         <div class="panel panel__two">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Team Spirit in league win
+            Defeat in Cup
           </p>
         </div>
         <!-- panel 3 -->
         <div class="panel panel__three">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Next year Membership open
+            Membership
           </p>
         </div>
         <!-- panel 4 -->
         <div class="panel panel__four">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Training Programs available
+            Training Programs
           </p>
         </div>
         <!-- panel 5 -->
         <div class="panel panel__five">
           <p class="panel__text paragraph-text paragraph-text--light">
-            Defeat in Cup
+            Team Spirit
           </p>
         </div>
       </div>
@@ -199,7 +223,8 @@
             FC THG 08 TV
           </p>
           <p class="paragraph-text paragraph-text--light">
-            Youth team training for weekend fixture.
+            Youth team training in the new state of the art complex for weekend
+            fixture.
           </p>
         </div>
       </div>
