first navbar sorted other than favicons

--- a/index.html
+++ b/index.html
@@ -32,25 +32,24 @@
         <ul class="first-nav__list">
           <li class="first-nav__item">
             <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-right-to-bracket"></i>Sign Up / Log In</a
+              ><i class="fa-solid fa-right-to-bracket"></i>Log In</a
             >
           </li>
           <li class="first-nav__item">
             <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-cart-shopping"></i>Cart(<span>2 Items</span
-              >)</a
+              ><i class="fa-solid fa-cart-shopping"></i>Sign Up</a
             >
           </li>
           <li class="first-nav__item">
             <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-truck"></i>Order Now</a
+              ><i class="fa-solid fa-truck"></i>Gallery</a
             >
           </li>
-          <li class="first-nav__item">
+          <!-- <li class="first-nav__item">
             <a href="#" class="first-nav__link"
               ><i class="fa-solid fa-heart"></i>Wish List</a
             >
-          </li>
+          </li>-->
         </ul>
       </nav>
       <!-- Search form section of first nav -->
