base for the video player javascript to be added

--- a/index.html
+++ b/index.html
@@ -42,14 +42,9 @@
           </li>
           <li class="first-nav__item">
             <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-truck"></i>Gallery</a
+              ><i class="fa-solid fa-truck"></i>Generate Password</a
             >
           </li>
-          <!-- <li class="first-nav__item">
-            <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-heart"></i>Wish List</a
-            >
-          </li>-->
         </ul>
       </nav>
       <!-- Search form section of first nav -->
