--- a/index.html
+++ b/index.html
@@ -408,6 +408,10 @@
     <!-- Footer section -->
     <footer class="footer">FC THG 08 - Tristan G © 2022-2023</footer>
 
+    <!-- background overlay-->
+    <div class="background__container">
+      <div class="background__loading-text">0%</div>
+    </div>
     <script src="javascript/script.js" charset="utf-8"></script>
   </body>
 </html>
