--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
     <footer class="footer">FC THG 08 - Tristan G © 2022-2023</footer>
 
     <!-- background overlay-->
-    <div class="background__container">
+    <!-- <div class="background__container">
       <div class="background__loading-text">0%</div>
-    </div>
+    </div>-->
     <script src="javascript/script.js" charset="utf-8"></script>
   </body>
 </html>
