styles for first navbar

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <ul class="first-nav__list">
           <li class="first-nav__item">
             <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-right-to-bracket"></i>Log In</a
+              ><i class="fa-solid fa-key"></i>Log In</a
             >
           </li>
           <li class="first-nav__item">
             <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-cart-shopping"></i>Sign Up</a
+              ><i class="fa-solid fa-right-to-bracket"></i>Register</a
             >
           </li>
           <li class="first-nav__item">
             <a href="#" class="first-nav__link"
-              ><i class="fa-solid fa-truck"></i>Generate Password</a
+              ><i class="fa-solid fa-shield-halved"></i>Generate Password</a
             >
           </li>
         </ul>
